--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body{
 <!-- BOTTOM QUOTES -->
 <div class="quote q-bl">Hard work beats talent when talent doesn’t work hard.</div>
 <div class="quote q-bc">Someone don’t like me — maybe because I’m too good.</div>
-<div class="quote q-br">Everything is possible — just believe.</div>
+<div class="quote q-br">Rule number one: never be number two.</div>
 
 <div class="center">
   <div class="grid" id="grid"></div>
